# icy-bot

./: .gitignore  Bot.hpp  CMakeLists.txt  Chat.hpp  Errors.hpp  ForecastDay.cpp  ForecastDay.hpp  Icy.cpp  Log.hpp  Message.hpp  Meteo.cpp  Meteo.hpp  Methods.hpp  MethodsManager.hpp  Photo.hpp  README.md  Request.hpp  Requests.cpp  Requests.hpp  Result.hpp  Sticker.hpp  Update.hpp  User.hpp  Utils.cpp  Utils.hpp  encoding_fixer.sh
JSON/: dialogs.json  triggers.json
resources/JSON/: dialogs.json  triggers.json
src/: main.cpp
src/core/: Bot.hpp  RequestResult.hpp  Requests.hpp
src/entities/: BaseResponse.hpp  Chat.hpp  ChatMember.hpp  ChatPermissions.hpp  File.hpp  InputFile.hpp  InputMedia.hpp  MaskPosition.hpp  Message.hpp  Photo.hpp  PhotoSize.hpp  Poll.hpp  PollOption.hpp  QuotedMessage.hpp  Sticker.hpp  StickerSet.hpp  Update.hpp  User.hpp  UserProfilePhotos.hpp
src/entities/enums/: Enums.hpp
src/entities/methods/: AddStickerToSet.hpp  BaseMethod.hpp  CreateNewStickerSet.hpp  DeleteChatPhoto.hpp  DeleteChatStickerSet.hpp  DeleteMessage.hpp  DeleteStickerFromSet.hpp  EditMessageCaption.hpp  EditMessageLiveLocation.hpp  EditMessageMedia.hpp  EditMessageReplyMarkup.hpp  EditMessageText.hpp  ExportChatInviteLink.hpp  ForwardMessage.hpp  GetChat.hpp  GetChatAdministrators.hpp  GetChatMember.hpp  GetChatMembersCount.hpp  GetFile.hpp  GetMe.hpp  GetStickerSet.hpp  GetUpdates.hpp  GetUserProfilePhotos.hpp  KickChatMember.hpp  LeaveChat.hpp  PinChatMessage.hpp  PromoteChatMember.hpp  RestrictChatMember.hpp  SendAnimation.hpp  SendAudio.hpp  SendChatAction.hpp  SendContact.hpp  SendDocument.hpp  SendLocation.hpp  SendMessage.hpp  SendPhoto.hpp  SendPoll.hpp  SendSticker.hpp  SendVenue.hpp  SendVideo.hpp  (+14 more)
src/utils/: Errors.hpp  Log.hpp  Utils.hpp
